--- a/myapp/templates/animals.html
+++ b/myapp/templates/animals.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>List of {{ pet_type_template }}</h1>
+<h1>List of {{ pet_type }}</h1>
+
 <ul>
-    {% for pet in pets_template %}
-    <li><a href="/animals/{{  pet_type_template  }}/{{  loop.index0  }}">{{  pet.name  }}</a></li>
+    {% for pet in pets %}
+    <li><a href="/animals/{{ pet.id }}">{{ pet.name }}</a></li>
     {% endfor %}
 </ul>
 {% endblock %}
