--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="../static/css/style.css" rel="stylesheet">
 
     <title>Adopt a Pet</title>
 </head>
@@ -24,9 +25,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('register')}}">Register a Pet</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('about')}}">About Us</a>
+              </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex" role="search" action="/search" method="GET">
+              <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
