--- a/myapp/templates/pet.html
+++ b/myapp/templates/pet.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>{{ pet.name }}</h1>
-<img src="{{pet.url}}">
+<img src="{{pet.url}}" id="pet_image">
 <p>{{ pet.description }}</p>
 <ul>
     {% if pet.breed %}
