--- a/myapp/templates/animals.html
+++ b/myapp/templates/animals.html
@@ -1,11 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>List of {{ pet_type }}</h1>
+<style>
+    .grid-container {
+      display: grid;
+      grid-template-columns: auto auto auto;
+      background-color: #2196F3;
+      padding: 10px;
+    }
+    .grid-item {
+      background-color: rgba(255, 255, 255, 0.8);
+      border: 1px solid rgba(0, 0, 0, 0.8);
+      padding: 20px;
+      font-size: 30px;
+      text-align: center;
+    }
+    .pet_image{
+        height:100px;
+        width:auto;
+    }
+</style>
+<h1>List of products</h1>
 
-<ul>
+<div class="grid-container">
     {% for pet in pets %}
-    <li><a href="/animals/{{ pet.id }}">{{ pet.name }}</a></li>
-    {% endfor %}
-</ul>
-{% endblock %} 
-
+    <div class="grid-item"><a href="/animals/{{ pet.id }}"><img src="{{pet.url}}" class="pet_image">{{ pet.name }}</a></div>
+    {% endfor %} 
+  </div>
+{% endblock %}
