--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -26,19 +26,21 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Shop</a>
+                <a class="nav-link active" aria-current="page" href="{{url_for('index')}}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('register')}}">Favorites</a>
+                <a class="nav-link" href="{{url_for('register')}}">Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('register')}}">Sell</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('about')}}">FAQ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('about')}}">About Us</a>
               </li>
             </ul>
-            <form class="d-flex" role="search" action="/search" method="GET">
-              <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
