--- a/myapp/templates/update.html
+++ b/myapp/templates/update.html
@@ -1,78 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Update your favorites!</h1>
+<h1>Update Item details</h1>
 <form action="{{ url_for('update') }}" method="post">
-    <input type="hidden" name="pet_id" value="{{ pet.id }}">
-    <label for="p_type">Size:</label>
-    <select name="pet_type" id="p_type" required>
+    <input type="hidden" name="product_id" value="{{ item.ID }}">
+    <label for="p_size">Size of Apparel</label>
+    <select name="p_size" id="p_type" required>
         <option disabled selected value>...</option>
-        {% if pet.animal_type == "isha" %}
-        <option value="isha" selected> S: 250 PHP</option>
-        <option value="arol">M: 350 PHP</option>
-        <option value="luis"> L: 400 PHP</option>
-        {% elif pet.animal_type == "arol" %}
-        <option value="isha"> S: 250 PHP</option>
-        <option value="arol" selected>M: 350 PHP</option>
-        <option value="luis"> L: 400 PHP</option>
-        {% elif pet.animal_type == "luis" %}
-        <option value="isha"> S: 250 PHP</option>
-        <option value="arol">M: 350 PHP</option>
-        <option value="luis" selected> L: 400 PHP</option>
+        {% if item.Size == "S" %}
+        <option value="S" selected>S</option>
+        <option value="M">M</option>
+        <option value="L">L</option>
+        {% elif item.Size == "M" %}
+        <option value="S">S</option>
+        <option value="M" selected>M</option>
+        <option value="L">L</option>
+        {% elif item.Size == "L" %}
+        <option value="S">S</option>
+        <option value="M">M</option>
+        <option value="L" selected>L</option>
         {% endif %}
     </select><br><br>
-
-    <label for="p_name">Shirt Title:</label>
-    <select name="pet_type" id="p_type" required>
-        <option disabled selected value>...</option>
-        {% if pet.animal_type == "ahsi" %}
-        <option value="ahsi" selected> The Purple Flower </option>
-        <option value="lora"> The Shadow Tinge </option>
-        <option value="siul"> The Purple Bits </option>
-        <option value="owl"> The Natural Abyss </option>
-        <option value="kash"> The Boiling Blue </option>
-        <option value="lash"> Touch of a Purplish Naivety </option>
-        {% if pet.animal_type == "lora" %}
-        <option value="ahsi"> The Purple Flower </option>
-        <option value="lora" selected> The Shadow Tinge </option>
-        <option value="siul"> The Purple Bits </option>
-        <option value="owl"> The Natural Abyss </option>
-        <option value="kash"> The Boiling Blue </option>
-        <option value="lash"> Touch of a Purplish Naivety </option>
-        {% if pet.animal_type == "siul" %}
-        <option value="ahsi"> The Purple Flower </option>
-        <option value="lora"> The Shadow Tinge </option>
-        <option value="siul" selected> The Purple Bits </option>
-        <option value="owl"> The Natural Abyss </option>
-        <option value="kash"> The Boiling Blue </option>
-        <option value="lash"> Touch of a Purplish Naivety </option>
-        {% if pet.animal_type == "owl" %}
-        <option value="ahsi"> The Purple Flower </option>
-        <option value="lora"> The Shadow Tinge </option>
-        <option value="siul"> The Purple Bits </option>
-        <option value="owl" selected> The Natural Abyss </option>
-        <option value="kash"> The Boiling Blue </option>
-        <option value="lash"> Touch of a Purplish Naivety </option>
-        {% if pet.animal_type == "kash" %}
-        <option value="ahsi"> The Purple Flower </option>
-        <option value="lora"> The Shadow Tinge </option>
-        <option value="siul"> The Purple Bits </option>
-        <option value="owl"> The Natural Abyss </option>
-        <option value="kash" selected> The Boiling Blue </option>
-        <option value="lash"> Touch of a Purplish Naivety </option>
-        {% if pet.animal_type == "lash" %}
-        <option value="ahsi"> The Purple Flower </option>
-        <option value="lora"> The Shadow Tinge </option>
-        <option value="siul"> The Purple Bits </option>
-        <option value="owl"> The Natural Abyss </option>
-        <option value="kash"> The Boiling Blue </option>
-        <option value="lash" selected> Touch of a Purplish Naivety </option>
-    </select><br><br>
-    
-    <label for="p_age">Date:</label>
-    <input type="number" name="pet_age" id="p_age" value="{{ pet.age }}"><br><br>
-    
-    <textarea name="pet_desc" cols="30" rows="10">{{ pet.description }}</textarea><br>
-    <input type="submit" value="Update">
+    <label for="p_name">Item Name:</label>
+    <input type="text" name="p_name" id="p_name" value="{{ item.Name }}" required><br><br>
+    <label for="p_price">Price:</label>
+    <input type="text" name="p_price" id="p_price" value="{{ item.Price }}" required><br><br>
+    <label for="p_url">Image URL:</label>
+    <input type="url" name="p_url" id="p_url" value="{{ item.Image }}" required><br>
+    <label for="p_url">Item Description:</label>
+    <textarea name="p_desc" cols="30" rows="10">{{ item.Desc }}</textarea><br>
+    <input type="submit" value="Update!">
 </form>
 {% endblock %}
