--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 <style>
+.logo{
+  text-align: center;
+  padding-bottom: 30px;
+  height:150px;
+  width: auto;
+}
+img{
+  height:100%;
+  width: 100%;
+}
 .w-100 {
   width: auto;
   height: 300px;
@@ -32,19 +42,19 @@
   color: white;
 }
 </style>
-<div class="dbutton"><button class="button1">Shop Now</button></div>
+
+<div class="logo"><img src="../static/css/img/logo.png"></img></div>
+
+<div class="dbutton"><button class="button1"><a href="/products/item">Shop Now</button></div>
 
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../static/css/img/shirt-1.jpg" class="d-block w-100" alt="...">
+    {% for item in items %}
+    <div class="carousel-item {% if loop.index == 1 %} active {% endif %}" id="slide{{ loop.index }}">
+      <img src="{{item.Image}}" class="d-block w-100" alt="...">
     </div>
-    <div class="carousel-item">
-      <img src="../static/css/img/shirt-2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="../static/css/img/shirt-3.jpg" class="d-block w-100" alt="...">
-    </div>
+    {% endfor %}
+    
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
