--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -5,14 +5,19 @@
   height:150px;
   width: auto;
 }
+
 img{
-  height:100%;
+  height: 100%;
   width: 100%;
 }
-.w-100 {
-  width: auto;
-  height: 300px;
+
+.image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
+
 .button {
   border: none;
   color: white;
@@ -24,10 +29,12 @@ img{
   margin: 4px 2px;
   cursor: pointer;
 }
+
 .dbutton {
   text-align: center;
   padding-bottom: 16px;
 }
+
 .button1 {
   background-color: white;
   color: black;
@@ -38,6 +45,7 @@ img{
   background-color: #4CAF50;
   color: white;
 }
+
 
 /* About page */
 h1 {
