--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,25 +4,31 @@
 
 <div class="logo"><img src="../static/img/logo.png"></img></div>
 
-<div class="dbutton"><button class="button1"><a href="/products/item">Shop Now</button></div>
-
-<div id="carouselExample" class="carousel slide">
-  <div class="carousel-inner">
-    {% for item in items %}
-    <div class="carousel-item {% if loop.index == 1 %} active {% endif %}" id="slide{{ loop.index }}">
-      <img src="{{item.Image}}" class="d-block w-100" alt="...">
-    </div>
+<div class="dbutton"><button class="button1"><a href="/products/item">Shop Now</a></button></div>
+<br>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    {% for shirt in shirts %}
+      <li data-target="#myCarousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}></li>
     {% endfor %}
-    
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+  </ol>
+  <div class="carousel-inner">
+    {% for shirt in shirts %}
+      <div class="carousel-item {% if loop.first %}active{% endif %}">
+        <div class="image-wrapper">
+          <img src="{{ url_for('static', filename='img/' ~ shirt) }}" class="d-block w-50" alt="Slideshow shirt">
+        </div>
+      </div>
+    {% endfor %}
+  </div class="prev/next">
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="sr-only">Next</span>
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+  </a>
 </div>
 
 {% endblock %}
