--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,23 +4,23 @@
 
 <div class="logo"><img src="../static/img/logo.png"></img></div>
 
-<div class="dbutton"><button class="button1"><a href="/products/item">Shop Now</a></button></div>
+<div class="dbutton"><button class="button1"><a href="/products">Shop Now</a></button></div>
 <br>
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
-    {% for shirt in shirts %}
-      <li data-target="#myCarousel" data-slide-to="{{ loop.index0 }}" {% if loop.first %}class="active"{% endif %}></li>
+    {% for index, shirt in shirts|enumerate %}
+      <li data-target="#myCarousel" data-slide-to="{{ index }}" {% if loop.first %}class="active"{% endif %}></li>
     {% endfor %}
   </ol>
   <div class="carousel-inner">
-    {% for shirt in shirts %}
+    {% for index, shirt in shirts|enumerate %}
       <div class="carousel-item {% if loop.first %}active{% endif %}">
         <div class="image-wrapper">
-          <img src="{{ url_for('static', filename='img/' ~ shirt) }}" class="d-block w-50" alt="Slideshow shirt">
+          <img src="{{ shirt }}" class="d-block w-100" alt="Slideshow shirt" style="max-height: 300px; object-fit: contain;">
         </div>
       </div>
     {% endfor %}
-  </div class="prev/next">
+  </div>
   <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
