--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -67,5 +67,11 @@
       });
     </script>
 
+    <script>
+      function closeErrorMessage() {
+        document.querySelector('.error-message').style.display = 'none';
+      }
+    </script>
+
 </body>
 </html>
