fixed errors in app.py

--- a/myapp/templates/purchase_success.html
+++ b/myapp/templates/purchase_success.html
@@ -6,7 +6,7 @@
   <ul>
     <li><strong>Product:</strong> {{ item_name }}</li>
     <li><strong>Quantity:</strong> {{ quantity }}</li>
-    <li><strong>Name:</strong> {{ buyer_name }}</li>
+    <li><strong>Name:</strong> {{ name }}</li>
     <li><strong>Contact Details:</strong> {{ contact_details }}</li>
     <li><strong>Address:</strong> {{ address }}</li>
   </ul>
