--- a/myapp/templates/buy.html
+++ b/myapp/templates/buy.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
   <h1>Buy Item</h1>
-  <form action="{{ url_for('process_purchase') }}" method="POST">
+  <form action="{{ url_for('purchase') }}" method="POST">
     <label for="name">Product Name:</label>
-    <input type="text" id="name" name="name" value="{{ item['name'] }}" readonly><br>
+    <input type="text" id="name" name="name" value="{{ product['name'] }}" readonly><br>
     <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" name="quantity" min="1" max="{{ item['stock'] }}"><br>
+    <input type="number" id="quantity" name="quantity" min="1" max="{{ product['stock'] }}"><br>
     <label for="buyer_name">Your Name:</label>
     <input type="text" id="buyer_name" name="buyer_name" required><br>
     <label for="contact_details">Contact Details:</label>
