--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -193,3 +193,50 @@ div.desc {
 #quantity {
   width: 35px;
 }
+
+/* Buy */
+
+/* CSS Styles */
+form.buy {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+label.buy {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+input[type="text"].buy,
+textarea.buy {
+  width: 300px;
+  height: 30px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+input[type="number"].buy {
+  width: 80px;
+  height: 30px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"].buy {
+  width: 100px;
+  height: 30px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"].buy:hover {
+  background-color: #45a049;
+}
