--- a/myapp/templates/buy.html
+++ b/myapp/templates/buy.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1>Buy Item</h1>
-  <form action="{{ url_for('purchase') }}" method="POST">
-    <label for="name">Product Name:</label>
-    <input type="text" id="name" name="name" value="{{ product['name'] }}" readonly><br>
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" name="quantity" min="1" max="{{ product['stock'] }}"><br>
-    <label for="buyer_name">Your Name:</label>
-    <input type="text" id="buyer_name" name="buyer_name" required><br>
-    <label for="contact_details">Contact Details:</label>
-    <input type="text" id="contact_details" name="contact_details" required><br>
-    <label for="address">Address:</label>
-    <textarea id="address" name="address" required></textarea><br>
-    <input type="submit" value="Buy">
+  <h2>Buy Item</h2><br><br>
+  <form action="{{ url_for('purchase_success') }}" method="POST" class="buy">
+    <label class="buy" for="name">Product Name:</label>
+    <input class="buy" type="text" id="name" name="name" value="{{ product['name'] }}" readonly><br>
+    <label class="buy" for="quantity">Quantity:</label>
+    <input class="buy" type="number" id="quantity" name="quantity" min="1" max="{{ product['stock'] }}"><br>
+    <label class="buy" for="buyer_name">Your Name:</label>
+    <input class="buy" type="text" id="buyer_name" name="buyer_name" required><br>
+    <label class="buy" for="contact_details">Contact Details:</label>
+    <input class="buy" type="text" id="contact_details" name="contact_details" required><br>
+    <label class="buy" for="address">Address:</label>
+    <textarea class="buy" id="address" name="address" required></textarea><br>
+    <input class="buy" type="submit" value="Buy">
   </form>
 {% endblock %}
