--- a/myapp/templates/purchase_success.html
+++ b/myapp/templates/purchase_success.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1>Purchase Successful</h1>
-  <p>Thank you for your purchase!</p>
-  <p>Order Details:</p>
-  <ul>
-    <li><strong>Product:</strong> {{ item_name }}</li>
-    <li><strong>Quantity:</strong> {{ quantity }}</li>
-    <li><strong>Name:</strong> {{ name }}</li>
-    <li><strong>Contact Details:</strong> {{ contact_details }}</li>
-    <li><strong>Address:</strong> {{ address }}</li>
-  </ul>
+  <h2>Purchase Success</h2>
+  <h3>Product Details:</h3>
+  <p>Product Name: {{ product_name }}</p>
+  <p>Size: {{ size }}</p>
+  <p>Quantity: {{ quantity }}</p>
+  <p>Price: {{ price }}</p>
+  <p>Your Name: {{ your_name }}</p>
+  <p>Contact Details: {{ contact_details }}</p>
+  <p>Address: {{ address }}</p>
+  <p>Date: {{ purchase_date }}</p>
+  <p>Thank you for your purchase! Please wait for the confirmation of your order in the contact detail/s that you provided. We hope to see you again soon!</p>
+  <a href="/home">Back to Home</a>
+  <a href="/products">Back to Products</a>
 {% endblock %}
