--- a/myapp/templates/buy.html
+++ b/myapp/templates/buy.html
@@ -1,17 +1,47 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h2>Buy Item</h2><br><br>
-  <form action="{{ url_for('purchase_success') }}" method="POST" class="buy">
-    <label class="buy" for="name">Product Name:</label>
-    <input class="buy" type="text" id="name" name="name" value="{{ product['name'] }}" readonly><br>
-    <label class="buy" for="quantity">Quantity:</label>
-    <input class="buy" type="number" id="quantity" name="quantity" min="1" max="{{ product['stock'] }}"><br>
-    <label class="buy" for="buyer_name">Your Name:</label>
-    <input class="buy" type="text" id="buyer_name" name="buyer_name" required><br>
-    <label class="buy" for="contact_details">Contact Details:</label>
-    <input class="buy" type="text" id="contact_details" name="contact_details" required><br>
-    <label class="buy" for="address">Address:</label>
-    <textarea class="buy" id="address" name="address" required></textarea><br>
-    <input class="buy" type="submit" value="Buy">
-  </form>
+<h2>Buy</h2>
+  <form action="/purchase_success" method="POST">
+      <input type="hidden" name="product_id" value="{{ product[0] }}">
+      <input type="hidden" name="product_name" value="{{ product[1] }}">
+      <input type="hidden" name="size" value="{{ product[2] }}">
+      <input type="hidden" name="quantity" value="{{ quantity }}">
+      <input type="hidden" name="price" value="{{ total_price }}">
+
+      <label for="product_name">Product Name:</label>
+      <input type="text" id="product_name" name="product_name" value="{{ product[1] }}" readonly><br><br>
+
+      <label for="size">Size:</label>
+      <input type="text" id="size" name="size" value="{{ product[2] }}" readonly><br><br>
+
+      <label for="quantity">Quantity:</label>
+      <input type="text" id="quantity" name="quantity" value="{{ quantity }}" readonly><br><br>
+
+      <label for="price">Price:</label>
+      <input type="text" id="price" name="price" value="{{ total_price }}" readonly><br><br>
+
+      <label for="your_name">Your Name:</label>
+      <input type="text" id="your_name" name="your_name" required><br><br>
+
+      <label for="contact_details">Contact Details:</label>
+      <input type="text" id="contact_details" name="contact_details" required><br><br>
+
+      <label for="address">Address:</label>
+      <input type="text" id="address" name="address" required><br><br>
+
+      <label for="payment_method">Payment Method:</label>
+      <select id="payment_method" name="payment_method" required>
+          <option value="Credit Card">Credit Card</option>
+          <option value="Debit Card">Debit Card</option>
+          <option value="G-Cash">G-Cash</option>
+          <option value="PayPal">PayPal</option>
+      </select><br><br>
+
+      <label for="proof_of_payment">Proof of Payment:</label>
+      <input type="file" id="proof_of_payment" name="proof_of_payment" accept="image/*" required><br><br>
+
+    <h3>Are you sure you want to make this purchase?</h3>
+      <input type="submit" value="Yes">
+        <a href="/item/{{ product[0] }}">No</a>
+    </form>
 {% endblock %}
