--- a/myapp/templates/register.html
+++ b/myapp/templates/register.html
@@ -1,23 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Register an Item for listing</h2>
-<form action="{{ url_for('processing') }}" method="post">
-    <label for="p_size">Size of Apparel</label>
-    <select name="p_size" id="p_Size" required>
-        <option disabled selected value>...</option>
-        <option value="S">S</option>
-        <option value="M">M</option>
-        <option value="L">L</option>
-    </select><br><br>
-    <label for="p_name">Item Name:</label>
-    <input type="text" name="p_name" id="p_name" required><br><br>
-    <label for="p_price">Price:</label>
-    <input type="text" name="p_price" id="p_breed" required><br><br>
-    <label for="p_url">Image URL:</label>
-    <input type="url" name="p_url" id="p_url" required><br>
-    <label for="p_desc">Item Description:</label>
-    <textarea name="p_desc" placeholder="Say something about your product" cols="30" rows="10"></textarea><br>
-    <input type="submit" value="Register!">
-</form>
+  <h2>Register Item</h2>
+  <form action="/register" method="POST" enctype="multipart/form-data">
+    <div>
+      <label for="size">Size:</label>
+      <select name="size" id="size" required>
+        <option value="Small">Small</option>
+        <option value="Medium">Medium</option>
+        <option value="Large">Large</option>
+      </select>
+    </div>
+    <div>
+      <label for="name">Name:</label>
+      <input type="text" name="name" id="name" required>
+    </div>
+    <div>
+      <label for="price">Price:</label>
+      <input type="number" name="price" id="price" required>
+    </div>
+    <div>
+      <label for="image">Image:</label>
+      <input type="file" name="image" id="image" required>
+    </div>
+    <div>
+      <label for="description">Description:</label>
+      <textarea name="description" id="description" required></textarea>
+    </div>
+    <div>
+      <button type="submit">Register</button>
+    </div>
+  </form>
 {% endblock %}
