--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="{{url_for('register')}}">Sell</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('about')}}">FAQ</a>
+                <a class="nav-link" href="{{url_for('faq')}}">FAQ</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('about')}}">About Us</a>
