--- a/myapp/templates/faq.html
+++ b/myapp/templates/faq.html
@@ -37,7 +37,7 @@
 
 <div class="indent1">
     <h5>Modes of Payment</h5>
-    <p> Kindly send your payment to our G-cash account [0981 192 0921 - Jear*** S*****].</p><br>
+    <p> Kindly send your payment to our G-cash account [0981 192 0921 - L** Pa*****].</p><br>
 </div>
 
 </body>
