fixed register.html; item details now inserted into database and can be viewed in /product

--- a/myapp/templates/faq.html
+++ b/myapp/templates/faq.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <body>
-
+<hr>
 <div class="indent1">
-    <h5>Sizes</h5>
+    <h4>Sizes</h4>
     <table class="table">
       
         <thead>
@@ -16,17 +16,17 @@
       
         <tbody>
           <tr>
-            <th scope="row">S</th>
+            <th scope="row">Small</th>
             <td>18</td>
             <td>25</td>
           </tr>
           <tr>
-            <th scope="row">M</th>
+            <th scope="row">Medium</th>
             <td>19</td>
             <td>26</td>
           </tr>
           <tr>
-            <th scope="row">L</th>
+            <th scope="row">Large</th>
             <td>20</td>
             <td>27</td>
           </tr>
@@ -34,9 +34,9 @@
       
       </table>
 </div>
-
+<br><hr>
 <div class="indent1">
-    <h5>Modes of Payment</h5>
+    <h4>Mode of Payment</h4>
     <p> Kindly send your payment to our G-cash account [0981 192 0921 - L** Pa*****].</p><br>
 </div>
 
