--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -151,16 +151,79 @@ div.desc {
 }
 
 /* Products */
+
+.view-options {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.view-option {
+  display: inline-block;
+  padding: 5px;
+  margin: 0 5px;
+  color: #888;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.view-option.active {
+  color: #000;
+}
+
+.view-option button {
+  background-color: #852e9b;
+  border: none;
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 4px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.view-option button:hover {
+  background-color: #5f226e;
+}
+
+.list-container {
+  list-style-type: none;
+  padding: 0;
+}
+
+.list-item {
+  margin-bottom: 10px;
+}
+
+.list-item a {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color: #f1f1f1;
+  text-decoration: none;
+  color: #333;
+  border: 1px solid #ccc;
+}
+
+.list-item a:hover {
+  background-color: #8d2e8d;
+  color: white;
+}
+
+.list-item a img {
+  height: 24px;
+  width: 24px;
+  margin-right: 10px;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  background-color: #2196F3;
+  background-color: #b65ddf;
   padding: 10px;
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
+  background-color: whitesmoke;
+  border: 1px solid black;
   padding: 20px;
   text-align: center;
 }
@@ -184,9 +247,15 @@ div.desc {
 }
 
 #product_image {
-    height:300px;
-    width:auto;
+  height:300px;
+  width:auto;
 }
+
+.grid-item:hover {
+  background-color: #8d2e8d;
+  color: white;
+}
+
 
 /* Item */
 
@@ -195,48 +264,3 @@ div.desc {
 }
 
 /* Buy */
-
-/* CSS Styles */
-form.buy {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-label.buy {
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-input[type="text"].buy,
-textarea.buy {
-  width: 300px;
-  height: 30px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
-
-input[type="number"].buy {
-  width: 80px;
-  height: 30px;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 10px;
-}
-
-input[type="submit"].buy {
-  width: 100px;
-  height: 30px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="submit"].buy:hover {
-  background-color: #45a049;
-}
