--- a/myapp/templates/products.html
+++ b/myapp/templates/products.html
@@ -1,17 +1,39 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="grid-container">
-  {% set displayed_images = [] %}
-  {% for item in items %}
-    {% if item['image_url'] not in displayed_images %}
-      {% set _ = displayed_images.append(item['image_url']) %}
-      <div class="grid-item">
-          <a href="{{ url_for('item', name=item['name']) }}">
-              <img src="{{ item['image_url'] }}" alt="Item Image">
-              <p>{{ item['name'] }}</p>
-          </a>
-      </div>
-    {% endif %}
-  {% endfor %} 
+<div class="view-options">
+  <a href="{{ url_for('products', view='grid') }}" class="view-option {% if view == 'grid' %}active{% endif %}">
+    <button class="view-button"><i class="fas fa-th-large"> Grid View </i></button>
+  </a>
+  <a href="{{ url_for('products', view='list') }}" class="view-option {% if view == 'list' %}active{% endif %}">
+    <button class="view-button"><i class="fas fa-bars"> List View </i></button>
+  </a>
 </div>
+
+{% set displayed_items = [] %}
+{% if view == 'grid' %}
+  <div class="grid-container">
+    {% for item in items %}
+      {% if item['image_url'] not in displayed_items %}
+        {% set _ = displayed_items.append(item['image_url']) %}
+        <div class="grid-item">
+          <a href="{{ url_for('item', name=item['name']) }}">
+            <img src="{{ item['image_url'] }}" alt="Item Image">
+            <p>{{ item['name'] }}</p>
+          </a>
+        </div>
+      {% endif %}
+    {% endfor %} 
+  </div>
+{% else %}
+  <ul class="list-container">
+    {% for item in items %}
+      {% if item['name'] not in displayed_items %}
+        {% set _ = displayed_items.append(item['name']) %}
+        <li class="list-item">
+          <a href="{{ url_for('item', name=item['name']) }}">{{ item['name'] }}</a>
+        </li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+{% endif %}
 {% endblock %}
