--- a/myapp/templates/purchase_success.html
+++ b/myapp/templates/purchase_success.html
@@ -5,8 +5,7 @@
   <h3>Thank you for your purchase!</h3>
   <p>Product: {{ product_name }}</p>
   <p>Size: {{ size }}</p>
-  <p>Quantity: {{ quantity }}</p>
-  <p>Price: ${{ price }}</p>
+  <p>Price: P{{ price }}</p>
   <p>Your Name: {{ your_name }}</p>
   <p>Contact Details: {{ contact_details }}</p>
   <p>Address: {{ address }}</p>
