--- a/myapp/templates/item.html
+++ b/myapp/templates/item.html
@@ -27,8 +27,9 @@
       <input class="btn btn-danger" type="submit" name="action" value="delete"></input>
     </form>
     {% else %}
-    <form action="{{ url_for('buy') }}" method="post">
+    <form action="{{ url_for('buy', product_name=item['name']) }}" method="POST" enctype="multipart/form-data">
       <input type="hidden" name="product_id" value="{{ product.id }}">
+      <input type="hidden" name="product_name" value="{{ product.name }}">
       <input class="btn btn-secondary" type="submit" name="action" value="Buy"></input>
     </form>
     {% endif %}
