--- a/myapp/static/css/style.css
+++ b/myapp/static/css/style.css
@@ -51,8 +51,9 @@ img{
 
 .login {
   background-color: #7b59ac;
-  padding: 10px;
-  margin-bottom: 10px;  
+  padding: 40px;
+  margin-bottom: 10px;
+  color: whitesmoke;  
 }
 
 
