--- a/myapp/templates/item.html
+++ b/myapp/templates/item.html
@@ -27,9 +27,10 @@
       <input class="btn btn-danger" type="submit" name="action" value="delete"></input>
     </form>
     {% else %}
-    <form action="{{ url_for('buy', product_name=item['name']) }}" method="POST" enctype="multipart/form-data">
-      <input type="hidden" name="product_id" value="{{ product.id }}">
+    <form action="{{ url_for('buy', product_name=item['name'], product_size=item['size'], product_price=item['price']) }}" method="POST">
       <input type="hidden" name="product_name" value="{{ product.name }}">
+      <input type="hidden" name="product_size" value="{{ product.size }}">
+      <input type="hidden" name="product_price" value="{{ product.price }}">
       <input class="btn btn-secondary" type="submit" name="action" value="Buy"></input>
     </form>
     {% endif %}
