--- a/myapp/templates/purchase_success.html
+++ b/myapp/templates/purchase_success.html
@@ -4,18 +4,14 @@
 <div id="order">
   <hr><hr>
   <h2>Your Purchase Summary</h2><hr><br>
-  <h3>Product Name: {{ purchases[-1]['product_name'] }}</h3>
-  <p>Size: {{ purchases[-1]['size'] }}</p>
-  <p>Price: {{ purchases[-1]['price'] }}</p>
-  <p>Your Name: {{ purchases[-1]['your_name'] }}</p>
-  <p>Contact Details: {{ purchases[-1]['contact_details'] }}</p>
-  <p>Address: {{ purchases[-1]['address'] }}</p>
+  <h3>Product Name: {{ purchase.product_name }}</h3>
+  <p>Size: {{ purchase.product_size }}</p>
+  <p>Price: {{ purchase.product_price }}</p>
+  <p>Your Name: {{ purchase.your_name }}</p>
+  <p>Contact Details: {{ purchase.contact_details }}</p>
+  <p>Address: {{ purchase.address }}</p>
   <p>Proof of Payment:</p>
-  {% if purchases[-1]['proof_of_payment'] is not none %}
-    <img src="{{ url_for('static', filename='uploads/' + purchases[-1]['proof_of_payment']) }}" alt="Proof of Payment">
-  {% else %}
-    <p>No proof of payment available.</p>
-  {% endif %}
+    <img src="{{ purchase.proof_of_payment }}" alt="Proof of Payment">
   <hr><hr>
 
   <p>Thank you for your purchase! To receive your item, kindly wait for our update in the contact details you've provided us or you can reach out to us via the contact channels indicated on our About page.</p><br>
